--- a/20221017/pandas_dtype.ipynb
+++ b/20221017/pandas_dtype.ipynb
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "77e0a31e-b792-4304-a71f-08b6ffba4384",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
        "Name: Active, dtype: bool"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "2ecac3b4-0be8-44b2-ae71-378fe0a8a8dd",
    "metadata": {},
    "outputs": [],
@@ -653,27 +653,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "05f74ac3-a4c4-4b7e-9ccc-6a191e4f2d2d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Customer Number     int32\n",
-       "Customer Name      object\n",
-       "2016               object\n",
-       "2017               object\n",
-       "Percent Growth     object\n",
-       "Jan Units          object\n",
-       "Month               int64\n",
-       "Day                 int64\n",
-       "Year                int64\n",
-       "Active             object\n",
+       "Customer Number           float64\n",
+       "Customer Name              object\n",
+       "2016                       object\n",
+       "2017                       object\n",
+       "Percent Growth             object\n",
+       "Jan Units                 float64\n",
+       "Month                       int64\n",
+       "Day                         int64\n",
+       "Year                        int64\n",
+       "Active                     object\n",
+       "Start_Date         datetime64[ns]\n",
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
