--- a/20221205/MLPClassifier.ipynb
+++ b/20221205/MLPClassifier.ipynb
@@ -2,105 +2,449 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "id": "5f4ac1bc-1453-4a4d-b416-84836076f9dc",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neural_network import MLPClassifier\n",
-    "from sklearn.datasets import make_classification\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import metrics\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "c4c04868-6150-4265-bd96-ffb594d55380",
+   "execution_count": 16,
+   "id": "d6ee1313-0942-4780-aacc-e26b3f637161",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal.length</th>\n",
+       "      <th>sepal.width</th>\n",
+       "      <th>petal.length</th>\n",
+       "      <th>petal.width</th>\n",
+       "      <th>variety</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>6.3</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>Versicolor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>6.1</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>Versicolor</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    sepal.length  sepal.width  petal.length  petal.width     variety\n",
+       "56           6.3          3.3           4.7          1.6  Versicolor\n",
+       "71           6.1          2.8           4.0          1.3  Versicolor"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv(\"iris.csv\")\n",
+    "data.sample(n=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7a0dc1d9-4ac5-4a45-9830-511a4c64c34a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal.length</th>\n",
+       "      <th>sepal.width</th>\n",
+       "      <th>petal.length</th>\n",
+       "      <th>petal.width</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>131</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.915254</td>\n",
+       "      <td>0.791667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>0.222222</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.152542</td>\n",
+       "      <td>0.125000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     sepal.length  sepal.width  petal.length  petal.width\n",
+       "131      1.000000         0.75      0.915254     0.791667\n",
+       "44       0.222222         0.75      0.152542     0.125000"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_norm = data[['sepal.length', 'sepal.width', 'petal.length', 'petal.width']].apply(lambda x: (x - x.min()) / (x.max() - x.min()))\n",
+    "df_norm.sample(n=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "be9216a8-d183-45ba-af50-baa9b0827228",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>variety</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     variety\n",
+       "66         1\n",
+       "43         0\n",
+       "64         1\n",
+       "45         0\n",
+       "112        2"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target = data[['variety']].replace(['Setosa','Versicolor','Virginica'],[0,1,2])\n",
+    "target.sample(n=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "502da3b7-1a5a-4926-8fdf-7533d23022fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal.length</th>\n",
+       "      <th>sepal.width</th>\n",
+       "      <th>petal.length</th>\n",
+       "      <th>petal.width</th>\n",
+       "      <th>variety</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>0.458333</td>\n",
+       "      <td>0.084746</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>140</th>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.458333</td>\n",
+       "      <td>0.779661</td>\n",
+       "      <td>0.958333</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>0.458333</td>\n",
+       "      <td>0.084746</td>\n",
+       "      <td>0.041667</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113</th>\n",
+       "      <td>0.388889</td>\n",
+       "      <td>0.208333</td>\n",
+       "      <td>0.677966</td>\n",
+       "      <td>0.791667</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>138</th>\n",
+       "      <td>0.472222</td>\n",
+       "      <td>0.416667</td>\n",
+       "      <td>0.644068</td>\n",
+       "      <td>0.708333</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     sepal.length  sepal.width  petal.length  petal.width  variety\n",
+       "9        0.166667     0.458333      0.084746     0.000000        0\n",
+       "140      0.666667     0.458333      0.779661     0.958333        2\n",
+       "34       0.166667     0.458333      0.084746     0.041667        0\n",
+       "113      0.388889     0.208333      0.677966     0.791667        2\n",
+       "138      0.472222     0.416667      0.644068     0.708333        2"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.concat([df_norm, target], axis=1)\n",
+    "df.sample(n=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "bcbc0edd-e110-41fe-9496-a89f483d1a1c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#建立測試資料\n",
-    "X, y = make_classification(n_samples=100, random_state=1)"
+    "train,test=train_test_split(df, test_size=0.3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "e5fb3b57-7b02-41fa-92b7-270fc4c0cfc5",
+   "execution_count": 29,
+   "id": "f17f6469-3ce7-4bbf-ac9d-770c43deaeb5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, stratify=y, random_state=1)"
+    "train_X=train[['sepal.length','sepal.width','petal.length','petal.width']]\n",
+    "train_y=train.variety"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "2d840430-da02-4b20-897b-f5a07db085e6",
+   "execution_count": 30,
+   "id": "6ca2fdcf-b040-4020-8638-bcfa7232d7d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_X=test[['sepal.length','sepal.width','petal.length','petal.width']]\n",
+    "test_y=test.variety"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "d8811900-2172-4993-8033-11f234139f1f",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<style>#sk-container-id-14 {color: black;background-color: white;}#sk-container-id-14 pre{padding: 0;}#sk-container-id-14 div.sk-toggleable {background-color: white;}#sk-container-id-14 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-14 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-14 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-14 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-14 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-14 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-14 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-14 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-14 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-14 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-14 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-14 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-14 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-14 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-14 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-14 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-14 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-14 div.sk-item {position: relative;z-index: 1;}#sk-container-id-14 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-14 div.sk-item::before, #sk-container-id-14 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-14 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-14 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-14 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-14 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-14 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-14 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-14 div.sk-label-container {text-align: center;}#sk-container-id-14 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-14 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-14\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>MLPClassifier(alpha=1e-05, hidden_layer_sizes=(3, 3), random_state=1,\n",
+       "              solver=&#x27;lbfgs&#x27;)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-14\" type=\"checkbox\" checked><label for=\"sk-estimator-id-14\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">MLPClassifier</label><div class=\"sk-toggleable__content\"><pre>MLPClassifier(alpha=1e-05, hidden_layer_sizes=(3, 3), random_state=1,\n",
+       "              solver=&#x27;lbfgs&#x27;)</pre></div></div></div></div></div>"
+      ],
       "text/plain": [
-       "array([[0.03838405, 0.96161595]])"
+       "MLPClassifier(alpha=1e-05, hidden_layer_sizes=(3, 3), random_state=1,\n",
+       "              solver='lbfgs')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clf = MLPClassifier(random_state=1, max_iter=300).fit(X_train, y_train)\n",
-    "clf.predict_proba(X_test[:1])"
+    "clf=MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(3,3), random_state=1)\n",
+    "clf.fit(train_X, train_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "7592f026-a84b-440a-a80c-183aec85f897",
+   "execution_count": 84,
+   "id": "e04949cb-e04e-47eb-9bb9-853cfe47a6e7",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([1, 0, 1, 0, 1])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 2 2 0 1 2 1 0 0 1 0 0 1 0 1 2 1 2 0 0 0 2 2 0 0 2 2 2 2 2 0 2 1 1 1 0 1\n",
+      " 2 0 1 1 0 0 1 0]\n"
+     ]
     }
    ],
    "source": [
-    "clf.predict(X_test[:5, :])"
+    "prediction = clf.predict(test_X)\n",
+    "print(prediction)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "63ea7f8e-45a2-4284-af77-6fc9b721a406",
+   "execution_count": 85,
+   "id": "59265f0e-d31c-4a73-8d99-4531096d9ac9",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.88"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 2 2 0 1 2 1 0 0 1 0 0 1 0 1 2 1 2 0 0 0 2 2 0 0 2 1 2 2 2 0 2 1 1 1 0 1\n",
+      " 2 0 1 1 0 0 1 0]\n"
+     ]
     }
    ],
    "source": [
-    "clf.score(X_test, y_test)"
+    "print(test_y.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "489b29ad-7624-4607-817c-190a8e0020c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The accuracy of the Multi-layer Perceptron is: 0.9777777777777777\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('The accuracy of the Multi-layer Perceptron is:',metrics.accuracy_score(prediction,test_y))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6ee1313-0942-4780-aacc-e26b3f637161",
+   "id": "f4df8d8c-ab3e-48ca-bc54-c92c65be58f8",
    "metadata": {},
    "outputs": [],
    "source": []
